--- a/jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -66,7 +66,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: sqlalchemy==1.3.9 in /home/jupyterlab/conda/envs/python/lib/python3.7/site-packages (1.3.9)\n"
+      "Collecting sqlalchemy==1.3.9\n",
+      "  Downloading SQLAlchemy-1.3.9.tar.gz (6.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.0/6.0 MB\u001b[0m \u001b[31m72.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: sqlalchemy\n",
+      "  Building wheel for sqlalchemy (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.3.9-cp37-cp37m-linux_x86_64.whl size=1159121 sha256=4d895d627c536f158e1b3dfea92ac9c06e0ba9275dae640b5803a63b1564fd8f\n",
+      "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/03/71/13/010faf12246f72dc76b4150e6e599d13a85b4435e06fb9e51f\n",
+      "Successfully built sqlalchemy\n",
+      "Installing collected packages: sqlalchemy\n",
+      "  Attempting uninstall: sqlalchemy\n",
+      "    Found existing installation: SQLAlchemy 1.3.24\n",
+      "    Uninstalling SQLAlchemy-1.3.24:\n",
+      "      Successfully uninstalled SQLAlchemy-1.3.24\n",
+      "Successfully installed sqlalchemy-1.3.9\n"
      ]
     }
    ],
@@ -85,27 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -119,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -141,7 +146,7 @@
        "'Connected: @my_data1.db'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -194,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -236,7 +241,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -361,7 +366,7 @@
        " ('01-03-2013', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -408,22 +413,22 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>None</td>\n",
+       "            <td>45596</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(None,)]"
+       "[(45596,)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%sql select sum(payloadmasskg)  from SPACEXTBL where LaunchSite like 'CRS%'"
+    "%sql select sum(payloadmasskg)  from SPACEXTBL where Customer =  'NASA (CRS)'"
    ]
   },
   {
